  Configuration.CLIENT_SCHEDULE_CONNECTION_VALIDATION
  DatabaseUtil.closeSilently(Connection) added
  H2Database refactored
  Configuration.SHUTDOWN_EMBEDDED_DB_ON_DISCONNECT added
  LocalEntityConnectionProvider uses the above
  AbstractFilteredTableModel.initializeColumnComparator() added, overridable
  EntityJSONParser, made couple of methods public
  AbstractFilteredTableModelTest.customSorting() added
  EntityConnectionImpl.EntityResultPacker.loadEntity() error message improved
  LoginPanel improved a bit, allowing easier customization
  EntityDataUtil.batchInsert() now throws exception on non-positive integer batchSize
  PropertyImpl.prepareValue() added
  EntityConnectionImpl, minor refactoring
  EntityTableModel.get/SetReportDataSource() removed
  Criteria.getValues() now uses generics wildcard
  Criteria.asString() renamed to getWhereClause()
  EntityCriteria now extends Criteria<Property.ColumnProperty>
  EntityApplicationPanel.savePreferences() added and called when exiting
  EntityPanel.savePreferences() added
  EntityModel.savePreferences() added
  EntityTableModel.savePreferences() added
  DefaultEntityTableModel.savePreferences() implemented and applyPreferences() added and called during construction
  UiUtil.showInDialog() overloaded with closeAction parameter
  DefaultEntityTableModel, saving and applying preferences logs errors instead of throwing RuntimeException
  AbstractFilteredTableModel, column comparators initialized lazily
  Configuration.USE_CLIENT_PREFERENCES added
  DefaultEntityTableModel uses the above
  Util.removeUserPreference() added
  Util.flushUserPreferences() added, called during EntityApplicationPanel.exit()
  DefaultEntityTableModelTest.preferences() added
  Util, added some javadoc
  UiUtil.showInDialog() refactored and renamed to displayInDialog()
  AbstractFilteredTableModel.getComparable() is now abstract
  AbstractFilteredTableModelTest.findNextItemCoordinate() improved